@@ -3,3 +3,4 @@
 ^\.travis\.yml$
 prepareRepo.R
 README.Rmd
+^.*\.db$
