@@ -1,2 +1,2 @@
 knitr::knit("README.Rmd", "README.md")
-file.remove("example.db")
+file.remove(c("example.db", "example1.db"))
